# ReUseX

./: .clang-format  .claudeignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_AI.md  DOCUMENTATION.md  Doxyfile  README.md  TESTING.md  config__default.ini  default.nix  devshell.nix  flake.nix  process-compose.yaml  pyproject.toml  pytest.ini  run_tests.sh  shell.nix  test.py  tmux_session
.claude/: README.md  settings.local.json
.claude/agents/: codebase-architect.md
.github/agents/: doxygen-docstring-enforcer.agent.md  unittest.agent.md
.github/workflows/: claude-code-review.yml  doxy.yml  todo-action.yml  update-parent-issues-action.yml
apps/blender/: test_addon.py
apps/rux/: CMakeLists.txt
apps/rux/include/: add.hpp  annotate.hpp  assemble.hpp  create.hpp  del.hpp  edit.hpp  export.hpp  filter.hpp  filter_utils.hpp  get.hpp  global-params.hpp  import.hpp  info.hpp  log.hpp  mesh.hpp  processing_observer.hpp  project.hpp  register.hpp  remove.hpp  set.hpp  spdmon.hpp  texture.hpp  validation.hpp  view.hpp
apps/rux/include/add/: cloud.hpp
apps/rux/include/create/: annotate.hpp  clouds.hpp  dense.hpp  instances.hpp  material.hpp  mesh.hpp  planes.hpp  project.hpp  rooms.hpp  texture.hpp  windows.hpp
apps/rux/include/database/: cloud_router.hpp  format_handler.hpp  frame_router.hpp  input_handler.hpp  label_router.hpp  log_router.hpp  mesh_router.hpp  panorama_router.hpp  passport_router.hpp  path_parser.hpp  project_router.hpp  resource_router.hpp
apps/rux/include/edit/: downsample.hpp
apps/rux/include/export/: README.md  colmap.hpp  e57.hpp  materialepas.hpp  ply.hpp  rhino.hpp  semantic_images.hpp  speckle.hpp
apps/rux/include/filter/: downsample.hpp
apps/rux/include/get/: clouds.hpp  mesh.hpp
apps/rux/include/import/: e57.hpp  materialepas.hpp  panorama.hpp  photos.hpp  ply.hpp  rtabmap.hpp
apps/rux/include/remove/: cloud.hpp
apps/rux/include/segment/: planes.hpp  rooms.hpp
apps/rux/include/set/: project.hpp
apps/rux/src/: add.cpp  annotate.cpp  assemble.cpp  create.cpp  del.cpp  edit.cpp  export.cpp  filter.cpp  filter_utils.cpp  get.cpp  import.cpp  info.cpp  log.cpp  mesh.cpp  processing_observer.cpp  project.cpp  register.cpp  remove.cpp  rux.cpp  segment.cpp  set.cpp  texture.cpp  validation.cpp  view.cpp
apps/rux/src/add/: cloud.cpp
apps/rux/src/create/: annotate.cpp  clouds.cpp  dense.cpp  instances.cpp  material.cpp  mesh.cpp  planes.cpp  project.cpp  rooms.cpp  texture.cpp  windows.cpp
apps/rux/src/database/: cloud_router.cpp  format_handler.cpp  frame_router.cpp  input_handler.cpp  label_router.cpp  log_router.cpp  mesh_router.cpp  panorama_router.cpp  passport_router.cpp  path_parser.cpp  project_router.cpp  resource_router.cpp
apps/rux/src/edit/: downsample.cpp
apps/rux/src/export/: colmap.cpp  e57.cpp  materialepas.cpp  ply.cpp  rhino.cpp  semantic_images.cpp  speckle.cpp
apps/rux/src/filter/: downsample.cpp
apps/rux/src/get/: clouds.cpp  mesh.cpp
apps/rux/src/import/: e57.cpp  materialepas.cpp  panorama.cpp  photos.cpp  ply.cpp  rtabmap.cpp
apps/rux/src/remove/: cloud.cpp
apps/rux/src/segment/: planes.cpp  rooms.cpp
apps/rux/src/set/: project.cpp
apps/ruxd/: CMakeLists.txt
apps/ruxd/include/: auth.hpp  clients.hpp  config.hpp  endpoints.hpp  handlers.hpp
apps/ruxd/src/: endpoints.cpp  main.cpp
apps/ruxd/src/clients/: clients.cpp  postgres.cpp  redis.cpp  s3.cpp
apps/ruxd/src/handlers/: health.cpp  meta.cpp  not_found.cpp  ready.cpp  segment.cpp
bindings/python/: CMakeLists.txt  README.md  _version.py.in  pyproject.toml
bindings/python/reusex/: __init__.py
bindings/python/src/: bindings.cpp
cmake/: CompilerOptions.cmake  Dependencies.cmake  Documentation.cmake  Installation.cmake  ReUseXConfig.cmake.in  ReUseXLibrary.cmake  ReUseXVisualizationLibrary.cmake  RuxExecutable.cmake  reusexConfig.cmake.in
completions/: README.md  rux.fish
devshells/: april.nix  blender.nix  completions.nix  mcl.nix  python.nix  services.nix
doc/: Doxyfile  OpenCV.md  header.html
doc/articles/: DOCUMENTATION.md
docs/: CUOPT_INTEGRATION.md  Doxyfile  README.md  filtering-implementation.md  window_creation_improvements.md
docs/design/: api-design-review.md  architecture.md  database-design.md  subproject-structure.md
docs/guides/: DataLoader.md  Process walk through.md  TESTING.md  apriltag-36h11-printing.md
modules/: ruxd.nix
overlays/: additions.nix  aws-sdk-cpp.nix  default.nix  embree.nix  highs.nix  opencv.nix  openmvs.nix  papilo.nix  pcl.nix  python.nix  rtabmap.nix  suitesparse-graphblas.nix  vtk.nix
python/: auto_annotate.py  convert_to_rtabmap.py
src/: ReUseX.cpp  SIFTFilter.hh  linkmlpy.cpp  reusex_markov_clustering.cpp  reusex_plane_segmentation.cpp  reusex_polygonal_surface_reconstruction.cpp  reusex_rhino_export.cpp  reusex_rtabmap_export.cpp
src/core/: all.hh  (+28 more)
tests/: .gitignore  CMakeLists.txt  README.md  test_completions.fish  test_example_template.cpp  test_geometry_utils.cpp  test_math.cpp
tests/fixtures/: README.md
tests/unit/: test_example_template.cpp  test_sample.cpp
tests/unit/core/: test_filter_expression.cpp  test_logging.cpp  test_materialepas_json_export.cpp  test_materialepas_json_import.cpp  test_materialepas_serialization.cpp  test_processing_observer.cpp  test_project_db_components.cpp  test_project_db_materials.cpp  test_project_db_pointclouds.cpp  test_project_db_project_info.cpp  test_types.cpp
tests/unit/geometry/: test_building_component.cpp  test_coplanar_polygon.cpp  test_create_windows.cpp  test_cuopt_mip.cpp  test_densify_synthetic.cpp  test_downsample.cpp  test_highs_pdlp.cpp  test_joint_pairwise_registration.cpp  test_segment_instances.cpp  test_solver_comparison.cpp  test_unweld.cpp  test_utils.cpp
tests/unit/io/: test_colmap_export.cpp  test_reusex.cpp  test_rhino.cpp  test_speckle.cpp  test_update_sensor_frame_pose.cpp
tests/unit/utils/: test_math.cpp
tests/unit/vision/: test_common_objects.cpp  test_image.cpp
tools/: generate_fish_completions.py
(+607 files in other folders)
