[project]
name = "ReUseX"
version = "0.0.1"
readme = "README.md"
description = "ReUseX is a too for processing point cloud scans of buildings intended for reuse."
keywords = ["ReUseX", "python", "ReUse Explorer"]
maintainers = [
    {name = "Povl Filip Sonne-Frederiksen", email="pfs@linkarkitektur.dk"},
    ]
requires-python = ">=3.9"

dependencies = [
    "numpy", 
    "spdlog",
    #"rhino3dm",
    "specklepy",
    "wheel",
    "g2o", # Nix packaged python package provided
    "mast3r" # Nix packaged python package provided
    ]


[project.optional-dependencies]
ml = ["pytorch"]


[project.urls]
source = "https://github.com/pfmephisto/ReUseX"
repository = "https://github.com/pfmephisto/ReUseX"


# Skripts
[project.scripts]
ReUseX = "ReUseX:run"
ReUseX_ML = "ReUseX:ml"


# Build system configuration
[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "wheel",
    ]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
cmake.build-type = "Release"
wheel.py-api = "cp39" # https://scikit-build-core.readthedocs.io/en/latest/cmakelists.html
wheel.license-files = ["LICENSE"]
sdist.exclude = [".github", "test.py", ".gitignore", ".gitmodules",".clang-format", "pkgs/**/*", "shell.nix", "test.py", "flake.*"] 
cmake.verbose = true
logging.level = "ERROR"
